<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    tool:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="402dp"
        android:layout_height="280dp">

        <TextView
            android:id="@+id/newsTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/news_title"
            android:textAlignment="center"
            android:textColor="#616161"
            android:textSize="20sp"
            android:textStyle="bold"
            tool:layout_constraintBottom_toTopOf="@+id/newsPosterImageView"
            tool:layout_constraintEnd_toEndOf="parent"
            tool:layout_constraintStart_toStartOf="parent"
            tool:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/newsPosterImageView"
            android:layout_width="wrap_content"
            android:layout_height="143dp"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/news_poster"
            android:scaleType="fitCenter"
            tool:layout_constraintBottom_toTopOf="@+id/newsDescriptionTextView"
            tool:layout_constraintEnd_toEndOf="parent"
            tool:layout_constraintStart_toStartOf="parent"
            tool:layout_constraintTop_toBottomOf="@+id/newsTitleTextView"
            tools:srcCompat="@drawable/news_image" />

        <TextView
            android:id="@+id/newsDescriptionTextView"
            android:layout_width="215dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/beskrivelse"
            android:textAlignment="center"
            tool:layout_constraintBottom_toTopOf="@+id/NewsDateTextView"
            tool:layout_constraintEnd_toEndOf="@+id/newsPosterImageView"
            tool:layout_constraintStart_toStartOf="@+id/newsPosterImageView"
            tool:layout_constraintTop_toBottomOf="@+id/newsPosterImageView" />

        <TextView
            android:id="@+id/NewsDateTextView"
            android:layout_width="215dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/dato"
            android:textAlignment="center"
            tool:layout_constraintBottom_toBottomOf="parent"
            tool:layout_constraintEnd_toEndOf="@+id/newsDescriptionTextView"
            tool:layout_constraintStart_toStartOf="@+id/newsDescriptionTextView"
            tool:layout_constraintTop_toBottomOf="@+id/newsDescriptionTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>