<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddnewsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/addnewsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legg_til_nyheter"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <EditText
        android:id="@+id/title"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:ems="20"
        android:inputType="textPersonName"
        android:text="@string/legg_til_tittel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addnewsView"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/cameraButton"
        android:layout_width="88dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_camera_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="Legg til bilde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:layout_marginBottom="320dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/beskrivelse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintVertical_bias="0.141" />


</androidx.constraintlayout.widget.ConstraintLayout>